Fix stream positioning on iOS

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,9 +1,9 @@
 .home-grid {
     display: grid;
     grid-template-rows: repeat(7, calc(15rem + 5vh));
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 50%);
     @include bp(m){
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 33.33333vw);
         grid-template-rows: repeat(8, calc(15rem + 5vh));
     }
     img, video {
@@ -14,23 +14,28 @@
 }
 
 .home-livestream {
-    overflow: hidden;
-    grid-column-start: 1;
-    grid-column-end: span 3;
+    //overflow: hidden;
     background: $gray;
+    grid-column-start: 1;
+    grid-column-end: span 2;
     min-height: 30vh;
+    position: relative;
+    z-index: -100;
     @include bp(m){
         grid-column-start: 2;
         grid-column-end: 4;
         grid-row-start: 1;
         grid-row-end: 4;
     }
-    position: relative;
-    z-index: -100;
     iframe {
         height: 100%;
         position: absolute;
-        object-fit: cover;
+        right: 0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+        display: block;
     }
 }
 
